force-app/main/default/objects/Route_Plan__c/Route_Plan__c.object-meta.xml
<CustomObject>
  <label>Route Plan</label>
  <pluralLabel>Route Plans</pluralLabel>
  <nameField>
    <label>Route Plan Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>