force-app/main/default/objects/Route_Plan__c/fields/OwnerUser__c.field-meta.xml
<CustomField>
  <fullName>OwnerUser__c</fullName>
  <label>Owner User</label>
  <type>Lookup</type>
  <referenceTo>User</referenceTo>
  <relationshipLabel>Owner User</relationshipLabel>
  <relationshipName>OwnerUser</relationshipName>
</CustomField>