force-app/main/default/objects/Route_Plan__c/fields/PlanDate__c.field-meta.xml
<CustomField>
  <fullName>PlanDate__c</fullName>
  <label>Plan Date</label>
  <type>Date</type>
</CustomField>