force-app/main/default/objects/Route_Plan__c/fields/Status__c.field-meta.xml
    <CustomField>
      <fullName>Status__c</fullName>
      <label>Status</label>
      <type>Picklist</type>
      <valueSet>
        <valueSetDefinition>
<value>
  <fullName>Draft</fullName>
</value>
<value>
  <fullName>Generated</fullName>
  <default>true</default>
  <label>Generated</label>
</value>
<value>
  <fullName>Completed</fullName>
</value>
        </valueSetDefinition>
      </valueSet>
    </CustomField>