force-app/main/default/objects/Route_Plan__c/fields/TotalDistanceKm__c.field-meta.xml
<CustomField>
  <fullName>TotalDistanceKm__c</fullName>
  <label>Total Distance (km)</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>