force-app/main/default/objects/Route_Plan__c/fields/TotalDurationMin__c.field-meta.xml
<CustomField>
  <fullName>TotalDurationMin__c</fullName>
  <label>Total Duration (min)</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>0</scale>
</CustomField>